# cosmwasm-handler

./: .gitignore  Cargo.toml  Makefile  NOTICE  README.md  helpers.ts
.cargo/: config
examples/: schema.rs
schema/: cw-nameservice.json  execute_msg.json  instantiate_msg.json  query_msg.json
src/: coin_helpers.rs  consts.rs  contract.rs  error.rs  execute.rs  helper.rs  lib.rs  msg.rs  reply.rs  state.rs  tests.rs
